# PhishGuard-AI-Explainable-Hybrid-Phishing-Detection-System

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: highlighter.py  llm_explainer.py  ml_classifier.py  model_metrics.py  nlp_features.py  pipeline.py  rule_engine.py  sender_analyzer.py  transformer_classifier.py  url_analyzer.py
backend/app/ai/models/: seed_data.py  train.py
backend/app/ai/models/saved/: .gitkeep  model_metrics.json
backend/app/api/v1/: auth.py  dashboard.py  deps.py  health.py  history.py  scan.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/database/: init_db.py  mongodb.py
backend/app/repositories/: api_key_repository.py  base.py  feedback_repository.py  scan_repository.py  user_repository.py
backend/app/schemas/: auth.py  dashboard.py  email.py
backend/app/services/: auth_service.py  dashboard_service.py  feedback_service.py  scan_service.py
backend/tests/: conftest.py
backend/tests/ai/: test_rule_engine.py
backend/tests/api/: test_scan.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: API.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: ClassificationBadge.tsx  EmptyState.tsx  LoadingSpinner.tsx  PageHeader.tsx  RiskGauge.tsx  SectionCard.tsx  StatCard.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: DashboardPage.tsx  HistoryPage.tsx  ModelComparisonPage.tsx  ReportPage.tsx  ScannerPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
