[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard-ai"
version = "1.0.0"
description = "AI-Powered Phishing Email Detector"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PhishGuard AI Team"},
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    # AI / ML
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # NLP
    "spacy>=3.7.0",
    "textblob>=0.18.0",
    # URL analysis
    "tldextract>=5.1.0",
    "validators>=0.28.0",
    # HTTP client
    "httpx>=0.27.0",
    # Database
    "pymongo>=4.8.0",
    "motor>=3.5.0",
    "certifi>=2024.8.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "bleach>=6.1.0",
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "isort>=5.13.0",
    "pre-commit>=3.8.0",
    "mongomock>=4.1.2",
]
transformers = [
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "sentence-transformers>=3.0.0",
]
llm = [
    "openai>=1.40.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PIE", "T20", "SIM"]
ignore = ["S101", "S603", "S607", "B008", "E501", "T201", "N806", "S105", "S104", "A002", "B904", "N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
